[gd_scene load_steps=7 format=3 uid="uid://b4ndp6v0ts1on"]

[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="1_iln2i"]
[ext_resource type="PackedScene" uid="uid://b3dmmym31kdbx" path="res://Scenes/UI/Lobby/HostLobby.tscn" id="2_eyp7f"]
[ext_resource type="PackedScene" uid="uid://biy1n2dqeqrox" path="res://Scenes/UI/Lobby/ClientLobby.tscn" id="3_rshoh"]
[ext_resource type="PackedScene" uid="uid://b6eoph2qpu0d" path="res://Scenes/UI/SettingsMenu.tscn" id="4_f2bj7"]
[ext_resource type="PackedScene" uid="uid://iqku7lopk1xl" path="res://Scenes/UI/CreditsMenu.tscn" id="5_bvo4w"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_3lov4"]
color = Color(0.701961, 0.701961, 0.701961, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 38
vertical = true

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_iln2i")

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="TopMenu" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="HostButton" type="Button" parent="MainContainer/TopMenu"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
text = " >> Host << 
"

[node name="JoinButton" type="Button" parent="MainContainer/TopMenu"]
layout_mode = 2
text = " -- Join -- 
"

[node name="SettingsButton" type="Button" parent="MainContainer/TopMenu"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="MainContainer/TopMenu"]
layout_mode = 2
text = "Credits"

[node name="VSeparator" type="VSeparator" parent="MainContainer/TopMenu"]
layout_mode = 2
theme_override_constants/separation = 92
theme_override_styles/separator = SubResource("StyleBoxLine_3lov4")

[node name="ReplaysButton" type="Button" parent="MainContainer/TopMenu"]
layout_mode = 2
text = "Replays"

[node name="UnitEditorButton" type="Button" parent="MainContainer/TopMenu"]
layout_mode = 2
text = "Unit Editor
"

[node name="MapEditorButton" type="Button" parent="MainContainer/TopMenu"]
layout_mode = 2
text = "Map Editor
"

[node name="ExitButton" type="Button" parent="MainContainer/TopMenu"]
layout_mode = 2
text = "Exit"

[node name="HostLobby" parent="MainContainer" instance=ExtResource("2_eyp7f")]
layout_mode = 2
size_flags_vertical = 3

[node name="ClientLobby" parent="MainContainer" instance=ExtResource("3_rshoh")]
visible = false
layout_mode = 2

[node name="SettingsMenu" parent="MainContainer" instance=ExtResource("4_f2bj7")]
visible = false
layout_mode = 2

[node name="CreditsMenu" parent="MainContainer" instance=ExtResource("5_bvo4w")]
visible = false
layout_mode = 2

[node name="FileDialogReplay" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(1000, 900)
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "replays/"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MainContainer/TopMenu/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainContainer/TopMenu/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MainContainer/TopMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainContainer/TopMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainContainer/TopMenu/ReplaysButton" to="." method="_on_replays_button_pressed"]
[connection signal="pressed" from="MainContainer/TopMenu/UnitEditorButton" to="." method="_on_unit_editor_button_pressed"]
[connection signal="pressed" from="MainContainer/TopMenu/MapEditorButton" to="." method="_on_map_editor_button_pressed"]
[connection signal="pressed" from="MainContainer/TopMenu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="file_selected" from="FileDialogReplay" to="." method="_on_file_dialog_replay_file_selected"]
